--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,18 +4,23 @@ build-backend = "pdm.backend"
 
 [project]
 # name it as your package name
-name = "quanttide-example-of-python-project"
+name = "qtcloud-id-provider"
 # semetric versions
 version = "0.1.0-alpha.1"
 # describe the package within one sentence
-description = "QuantTide Example of Python Project"
+description = "Provider of QuantTide Digital Identity Cloud"
 authors = [{name = "QuantTide Inc.", email = "opensource@quanttide.com"}]
 classifiers = [
     "Programming Language :: Python :: 3",
 ]
 requires-python = '>=3.10'
 dependencies = [
-    "dynaconf>=3.2.5",
+    "fastapi>=0.115.5",
+    "uvicorn>=0.32.1",
+    "sqlalchemy>=2.0.36",
+    "passlib>=1.7.4",
+    "pyjwt>=2.10.0",
+    "python-multipart>=0.0.17",
 ]
 # dynamic = ["version"]
 
@@ -29,4 +34,5 @@ distribution = false
 [tool.pdm.dev-dependencies]
 dev = [
     "pytest>=8.2.2",
+    "httpx>=0.27.2",
 ]
